src/objects/pdb_trip__x.object
<CustomObject>
    <description>caesars$pdb_trip</description>
    <externalDataSource>CustomApexHerokuConnector</externalDataSource>
    <externalName>caesars$pdb_trip</externalName>
    <fields>
        <fullName>account_c_home_prop_cd_fk__c</fullName>
        <description>account_c_home_prop_cd_fk</description>
        <externalDeveloperName>account_c_home_prop_cd_fk</externalDeveloperName>
        <label>account_c_home_prop_cd_fk</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>account_c_prop_cd_fk__c</fullName>
        <description>account_c_prop_cd_fk</description>
        <externalDeveloperName>account_c_prop_cd_fk</externalDeveloperName>
        <label>account_c_prop_cd_fk</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_as_brand_flag__c</fullName>
        <description>c_as_brand_flag</description>
        <externalDeveloperName>c_as_brand_flag</externalDeveloperName>
        <label>c_as_brand_flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_as_cms_flag__c</fullName>
        <description>c_as_cms_flag</description>
        <externalDeveloperName>c_as_cms_flag</externalDeveloperName>
        <label>c_as_cms_flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_casino_flag__c</fullName>
        <description>c_casino_flag</description>
        <externalDeveloperName>c_casino_flag</externalDeveloperName>
        <label>c_casino_flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_cons_rev_flag__c</fullName>
        <description>c_cons_rev_flag</description>
        <externalDeveloperName>c_cons_rev_flag</externalDeveloperName>
        <label>c_cons_rev_flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_curr_flag__c</fullName>
        <description>c_curr_flag</description>
        <externalDeveloperName>c_curr_flag</externalDeveloperName>
        <label>c_curr_flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_first_prop_visit__c</fullName>
        <description>c_first_prop_visit</description>
        <externalDeveloperName>c_first_prop_visit</externalDeveloperName>
        <label>c_first_prop_visit</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_home_prop_cd__c</fullName>
        <description>c_home_prop_cd</description>
        <externalDeveloperName>c_home_prop_cd</externalDeveloperName>
        <label>c_home_prop_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_hotel_flag__c</fullName>
        <description>c_hotel_flag</description>
        <externalDeveloperName>c_hotel_flag</externalDeveloperName>
        <label>c_hotel_flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_pos_flag__c</fullName>
        <description>c_pos_flag</description>
        <externalDeveloperName>c_pos_flag</externalDeveloperName>
        <label>c_pos_flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_cd__c</fullName>
        <description>c_prop_cd</description>
        <externalDeveloperName>c_prop_cd</externalDeveloperName>
        <label>c_prop_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_quality_cd__c</fullName>
        <description>c_quality_cd</description>
        <externalDeveloperName>c_quality_cd</externalDeveloperName>
        <label>c_quality_cd</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_rated_trip__c</fullName>
        <description>c_rated_trip</description>
        <externalDeveloperName>c_rated_trip</externalDeveloperName>
        <label>c_rated_trip</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_w2g_flag__c</fullName>
        <description>c_w2g_flag</description>
        <externalDeveloperName>c_w2g_flag</externalDeveloperName>
        <label>c_w2g_flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_week_cd__c</fullName>
        <description>c_week_cd</description>
        <externalDeveloperName>c_week_cd</externalDeveloperName>
        <label>c_week_cd</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contact_fk__c</fullName>
        <description>contact_fk</description>
        <externalDeveloperName>contact_fk</externalDeveloperName>
        <label>contact_fk</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_end_dt__c</fullName>
        <description>d_end_dt</description>
        <externalDeveloperName>d_end_dt</externalDeveloperName>
        <label>d_end_dt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>d_rpt_per__c</fullName>
        <description>d_rpt_per</description>
        <externalDeveloperName>d_rpt_per</externalDeveloperName>
        <label>d_rpt_per</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>d_start_dt__c</fullName>
        <description>d_start_dt</description>
        <externalDeveloperName>d_start_dt</externalDeveloperName>
        <label>d_start_dt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>d_timestamp__c</fullName>
        <description>d_timestamp</description>
        <externalDeveloperName>d_timestamp</externalDeveloperName>
        <label>d_timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>f_actual_all__c</fullName>
        <description>f_actual_all</description>
        <externalDeveloperName>f_actual_all</externalDeveloperName>
        <label>f_actual_all</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_actual_game__c</fullName>
        <description>f_actual_game</description>
        <externalDeveloperName>f_actual_game</externalDeveloperName>
        <label>f_actual_game</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_actual_oth__c</fullName>
        <description>f_actual_oth</description>
        <externalDeveloperName>f_actual_oth</externalDeveloperName>
        <label>f_actual_oth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_actual_slot__c</fullName>
        <description>f_actual_slot</description>
        <externalDeveloperName>f_actual_slot</externalDeveloperName>
        <label>f_actual_slot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_avgbet_game__c</fullName>
        <description>f_avgbet_game</description>
        <externalDeveloperName>f_avgbet_game</externalDeveloperName>
        <label>f_avgbet_game</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_avgbet_oth__c</fullName>
        <description>f_avgbet_oth</description>
        <externalDeveloperName>f_avgbet_oth</externalDeveloperName>
        <label>f_avgbet_oth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_avgbet_slot__c</fullName>
        <description>f_avgbet_slot</description>
        <externalDeveloperName>f_avgbet_slot</externalDeveloperName>
        <label>f_avgbet_slot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_beer_amt__c</fullName>
        <description>f_beer_amt</description>
        <externalDeveloperName>f_beer_amt</externalDeveloperName>
        <label>f_beer_amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_cash_chrg_amt__c</fullName>
        <description>f_cash_chrg_amt</description>
        <externalDeveloperName>f_cash_chrg_amt</externalDeveloperName>
        <label>f_cash_chrg_amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_cash_play_game__c</fullName>
        <description>f_cash_play_game</description>
        <externalDeveloperName>f_cash_play_game</externalDeveloperName>
        <label>f_cash_play_game</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_cash_play_oth__c</fullName>
        <description>f_cash_play_oth</description>
        <externalDeveloperName>f_cash_play_oth</externalDeveloperName>
        <label>f_cash_play_oth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_cash_play_slot__c</fullName>
        <description>f_cash_play_slot</description>
        <externalDeveloperName>f_cash_play_slot</externalDeveloperName>
        <label>f_cash_play_slot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_comp_rev__c</fullName>
        <description>f_comp_rev</description>
        <externalDeveloperName>f_comp_rev</externalDeveloperName>
        <label>f_comp_rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_comp_worth__c</fullName>
        <description>f_comp_worth</description>
        <externalDeveloperName>f_comp_worth</externalDeveloperName>
        <label>f_comp_worth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_discount_amt__c</fullName>
        <description>f_discount_amt</description>
        <externalDeveloperName>f_discount_amt</externalDeveloperName>
        <label>f_discount_amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_entertain_actual_profit__c</fullName>
        <description>f_entertain_actual_profit</description>
        <externalDeveloperName>f_entertain_actual_profit</externalDeveloperName>
        <label>f_entertain_actual_profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_entertain_avg_profit__c</fullName>
        <description>f_entertain_avg_profit</description>
        <externalDeveloperName>f_entertain_avg_profit</externalDeveloperName>
        <label>f_entertain_avg_profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_entertain_cash_rev__c</fullName>
        <description>f_entertain_cash_rev</description>
        <externalDeveloperName>f_entertain_cash_rev</externalDeveloperName>
        <label>f_entertain_cash_rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_entertain_cash_tt__c</fullName>
        <description>f_entertain_cash_tt</description>
        <externalDeveloperName>f_entertain_cash_tt</externalDeveloperName>
        <label>f_entertain_cash_tt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_entertain_comp_rev__c</fullName>
        <description>f_entertain_comp_rev</description>
        <externalDeveloperName>f_entertain_comp_rev</externalDeveloperName>
        <label>f_entertain_comp_rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_entertain_comp_tt__c</fullName>
        <description>f_entertain_comp_tt</description>
        <externalDeveloperName>f_entertain_comp_tt</externalDeveloperName>
        <label>f_entertain_comp_tt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_event_actual_profit__c</fullName>
        <description>f_event_actual_profit</description>
        <externalDeveloperName>f_event_actual_profit</externalDeveloperName>
        <label>f_event_actual_profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_event_avg_profit__c</fullName>
        <description>f_event_avg_profit</description>
        <externalDeveloperName>f_event_avg_profit</externalDeveloperName>
        <label>f_event_avg_profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_event_cash_rev__c</fullName>
        <description>f_event_cash_rev</description>
        <externalDeveloperName>f_event_cash_rev</externalDeveloperName>
        <label>f_event_cash_rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_event_cash_tt__c</fullName>
        <description>f_event_cash_tt</description>
        <externalDeveloperName>f_event_cash_tt</externalDeveloperName>
        <label>f_event_cash_tt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_event_comp_rev__c</fullName>
        <description>f_event_comp_rev</description>
        <externalDeveloperName>f_event_comp_rev</externalDeveloperName>
        <label>f_event_comp_rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_event_comp_tt__c</fullName>
        <description>f_event_comp_tt</description>
        <externalDeveloperName>f_event_comp_tt</externalDeveloperName>
        <label>f_event_comp_tt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_fb_rev__c</fullName>
        <description>f_fb_rev</description>
        <externalDeveloperName>f_fb_rev</externalDeveloperName>
        <label>f_fb_rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_food_amt__c</fullName>
        <description>f_food_amt</description>
        <externalDeveloperName>f_food_amt</externalDeveloperName>
        <label>f_food_amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_food_bev_nc_actual_profit__c</fullName>
        <description>f_food_bev_nc_actual_profit</description>
        <externalDeveloperName>f_food_bev_nc_actual_profit</externalDeveloperName>
        <label>f_food_bev_nc_actual_profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_food_bev_nc_avg_profit__c</fullName>
        <description>f_food_bev_nc_avg_profit</description>
        <externalDeveloperName>f_food_bev_nc_avg_profit</externalDeveloperName>
        <label>f_food_bev_nc_avg_profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_food_bev_nc_cash_rev__c</fullName>
        <description>f_food_bev_nc_cash_rev</description>
        <externalDeveloperName>f_food_bev_nc_cash_rev</externalDeveloperName>
        <label>f_food_bev_nc_cash_rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_food_bev_nc_cash_tt__c</fullName>
        <description>f_food_bev_nc_cash_tt</description>
        <externalDeveloperName>f_food_bev_nc_cash_tt</externalDeveloperName>
        <label>f_food_bev_nc_cash_tt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_food_bev_nc_comp_rev__c</fullName>
        <description>f_food_bev_nc_comp_rev</description>
        <externalDeveloperName>f_food_bev_nc_comp_rev</externalDeveloperName>
        <label>f_food_bev_nc_comp_rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_food_bev_nc_comp_tt__c</fullName>
        <description>f_food_bev_nc_comp_tt</description>
        <externalDeveloperName>f_food_bev_nc_comp_tt</externalDeveloperName>
        <label>f_food_bev_nc_comp_tt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_food_cd_actual_profit__c</fullName>
        <description>f_food_cd_actual_profit</description>
        <externalDeveloperName>f_food_cd_actual_profit</externalDeveloperName>
        <label>f_food_cd_actual_profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_food_cd_avg_profit__c</fullName>
        <description>f_food_cd_avg_profit</description>
        <externalDeveloperName>f_food_cd_avg_profit</externalDeveloperName>
        <label>f_food_cd_avg_profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_food_cd_cash_rev__c</fullName>
        <description>f_food_cd_cash_rev</description>
        <externalDeveloperName>f_food_cd_cash_rev</externalDeveloperName>
        <label>f_food_cd_cash_rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_food_cd_cash_tt__c</fullName>
        <description>f_food_cd_cash_tt</description>
        <externalDeveloperName>f_food_cd_cash_tt</externalDeveloperName>
        <label>f_food_cd_cash_tt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_food_cd_comp_rev__c</fullName>
        <description>f_food_cd_comp_rev</description>
        <externalDeveloperName>f_food_cd_comp_rev</externalDeveloperName>
        <label>f_food_cd_comp_rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_food_cd_comp_tt__c</fullName>
        <description>f_food_cd_comp_tt</description>
        <externalDeveloperName>f_food_cd_comp_tt</externalDeveloperName>
        <label>f_food_cd_comp_tt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_food_comp_amt__c</fullName>
        <description>f_food_comp_amt</description>
        <externalDeveloperName>f_food_comp_amt</externalDeveloperName>
        <label>f_food_comp_amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_food_fd_actual_profit__c</fullName>
        <description>f_food_fd_actual_profit</description>
        <externalDeveloperName>f_food_fd_actual_profit</externalDeveloperName>
        <label>f_food_fd_actual_profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_food_fd_avg_profit__c</fullName>
        <description>f_food_fd_avg_profit</description>
        <externalDeveloperName>f_food_fd_avg_profit</externalDeveloperName>
        <label>f_food_fd_avg_profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_food_fd_cash_rev__c</fullName>
        <description>f_food_fd_cash_rev</description>
        <externalDeveloperName>f_food_fd_cash_rev</externalDeveloperName>
        <label>f_food_fd_cash_rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_food_fd_cash_tt__c</fullName>
        <description>f_food_fd_cash_tt</description>
        <externalDeveloperName>f_food_fd_cash_tt</externalDeveloperName>
        <label>f_food_fd_cash_tt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_food_fd_comp_rev__c</fullName>
        <description>f_food_fd_comp_rev</description>
        <externalDeveloperName>f_food_fd_comp_rev</externalDeveloperName>
        <label>f_food_fd_comp_rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_food_fd_comp_tt__c</fullName>
        <description>f_food_fd_comp_tt</description>
        <externalDeveloperName>f_food_fd_comp_tt</externalDeveloperName>
        <label>f_food_fd_comp_tt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_food_qs_actual_profit__c</fullName>
        <description>f_food_qs_actual_profit</description>
        <externalDeveloperName>f_food_qs_actual_profit</externalDeveloperName>
        <label>f_food_qs_actual_profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_food_qs_avg_profit__c</fullName>
        <description>f_food_qs_avg_profit</description>
        <externalDeveloperName>f_food_qs_avg_profit</externalDeveloperName>
        <label>f_food_qs_avg_profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_food_qs_cash_rev__c</fullName>
        <description>f_food_qs_cash_rev</description>
        <externalDeveloperName>f_food_qs_cash_rev</externalDeveloperName>
        <label>f_food_qs_cash_rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_food_qs_cash_tt__c</fullName>
        <description>f_food_qs_cash_tt</description>
        <externalDeveloperName>f_food_qs_cash_tt</externalDeveloperName>
        <label>f_food_qs_cash_tt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_food_qs_comp_rev__c</fullName>
        <description>f_food_qs_comp_rev</description>
        <externalDeveloperName>f_food_qs_comp_rev</externalDeveloperName>
        <label>f_food_qs_comp_rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_food_qs_comp_tt__c</fullName>
        <description>f_food_qs_comp_tt</description>
        <externalDeveloperName>f_food_qs_comp_tt</externalDeveloperName>
        <label>f_food_qs_comp_tt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_golf_actual_profit__c</fullName>
        <description>f_golf_actual_profit</description>
        <externalDeveloperName>f_golf_actual_profit</externalDeveloperName>
        <label>f_golf_actual_profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_golf_avg_profit__c</fullName>
        <description>f_golf_avg_profit</description>
        <externalDeveloperName>f_golf_avg_profit</externalDeveloperName>
        <label>f_golf_avg_profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_golf_cash_rev__c</fullName>
        <description>f_golf_cash_rev</description>
        <externalDeveloperName>f_golf_cash_rev</externalDeveloperName>
        <label>f_golf_cash_rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_golf_cash_tt__c</fullName>
        <description>f_golf_cash_tt</description>
        <externalDeveloperName>f_golf_cash_tt</externalDeveloperName>
        <label>f_golf_cash_tt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_golf_comp_rev__c</fullName>
        <description>f_golf_comp_rev</description>
        <externalDeveloperName>f_golf_comp_rev</externalDeveloperName>
        <label>f_golf_comp_rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_golf_comp_tt__c</fullName>
        <description>f_golf_comp_tt</description>
        <externalDeveloperName>f_golf_comp_tt</externalDeveloperName>
        <label>f_golf_comp_tt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_liq_amt__c</fullName>
        <description>f_liq_amt</description>
        <externalDeveloperName>f_liq_amt</externalDeveloperName>
        <label>f_liq_amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_marker_play_game__c</fullName>
        <description>f_marker_play_game</description>
        <externalDeveloperName>f_marker_play_game</externalDeveloperName>
        <label>f_marker_play_game</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_marker_play_oth__c</fullName>
        <description>f_marker_play_oth</description>
        <externalDeveloperName>f_marker_play_oth</externalDeveloperName>
        <label>f_marker_play_oth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_marker_play_slot__c</fullName>
        <description>f_marker_play_slot</description>
        <externalDeveloperName>f_marker_play_slot</externalDeveloperName>
        <label>f_marker_play_slot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_misc_amt__c</fullName>
        <description>f_misc_amt</description>
        <externalDeveloperName>f_misc_amt</externalDeveloperName>
        <label>f_misc_amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_na_bev_amt__c</fullName>
        <description>f_na_bev_amt</description>
        <externalDeveloperName>f_na_bev_amt</externalDeveloperName>
        <label>f_na_bev_amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_oth_amt__c</fullName>
        <description>f_oth_amt</description>
        <externalDeveloperName>f_oth_amt</externalDeveloperName>
        <label>f_oth_amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_other_actual_profit__c</fullName>
        <description>f_other_actual_profit</description>
        <externalDeveloperName>f_other_actual_profit</externalDeveloperName>
        <label>f_other_actual_profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_other_avg_profit__c</fullName>
        <description>f_other_avg_profit</description>
        <externalDeveloperName>f_other_avg_profit</externalDeveloperName>
        <label>f_other_avg_profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_other_cash_rev__c</fullName>
        <description>f_other_cash_rev</description>
        <externalDeveloperName>f_other_cash_rev</externalDeveloperName>
        <label>f_other_cash_rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_other_cash_tt__c</fullName>
        <description>f_other_cash_tt</description>
        <externalDeveloperName>f_other_cash_tt</externalDeveloperName>
        <label>f_other_cash_tt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_other_comp_amt__c</fullName>
        <description>f_other_comp_amt</description>
        <externalDeveloperName>f_other_comp_amt</externalDeveloperName>
        <label>f_other_comp_amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_other_comp_rev__c</fullName>
        <description>f_other_comp_rev</description>
        <externalDeveloperName>f_other_comp_rev</externalDeveloperName>
        <label>f_other_comp_rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_other_comp_tt__c</fullName>
        <description>f_other_comp_tt</description>
        <externalDeveloperName>f_other_comp_tt</externalDeveloperName>
        <label>f_other_comp_tt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_other_payment_amt__c</fullName>
        <description>f_other_payment_amt</description>
        <externalDeveloperName>f_other_payment_amt</externalDeveloperName>
        <label>f_other_payment_amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_other_rev__c</fullName>
        <description>f_other_rev</description>
        <externalDeveloperName>f_other_rev</externalDeveloperName>
        <label>f_other_rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_package_actual_profit__c</fullName>
        <description>f_package_actual_profit</description>
        <externalDeveloperName>f_package_actual_profit</externalDeveloperName>
        <label>f_package_actual_profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_package_avg_profit__c</fullName>
        <description>f_package_avg_profit</description>
        <externalDeveloperName>f_package_avg_profit</externalDeveloperName>
        <label>f_package_avg_profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_package_cash_rev__c</fullName>
        <description>f_package_cash_rev</description>
        <externalDeveloperName>f_package_cash_rev</externalDeveloperName>
        <label>f_package_cash_rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_package_cash_tt__c</fullName>
        <description>f_package_cash_tt</description>
        <externalDeveloperName>f_package_cash_tt</externalDeveloperName>
        <label>f_package_cash_tt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_package_comp_rev__c</fullName>
        <description>f_package_comp_rev</description>
        <externalDeveloperName>f_package_comp_rev</externalDeveloperName>
        <label>f_package_comp_rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_package_comp_tt__c</fullName>
        <description>f_package_comp_tt</description>
        <externalDeveloperName>f_package_comp_tt</externalDeveloperName>
        <label>f_package_comp_tt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_pos_actual_profit_amt__c</fullName>
        <description>f_pos_actual_profit_amt</description>
        <externalDeveloperName>f_pos_actual_profit_amt</externalDeveloperName>
        <label>f_pos_actual_profit_amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_pos_avg_profit_amt__c</fullName>
        <description>f_pos_avg_profit_amt</description>
        <externalDeveloperName>f_pos_avg_profit_amt</externalDeveloperName>
        <label>f_pos_avg_profit_amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_pos_comp_amt__c</fullName>
        <description>f_pos_comp_amt</description>
        <externalDeveloperName>f_pos_comp_amt</externalDeveloperName>
        <label>f_pos_comp_amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_retail_amt__c</fullName>
        <description>f_retail_amt</description>
        <externalDeveloperName>f_retail_amt</externalDeveloperName>
        <label>f_retail_amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_retail_le_actual_profit__c</fullName>
        <description>f_retail_le_actual_profit</description>
        <externalDeveloperName>f_retail_le_actual_profit</externalDeveloperName>
        <label>f_retail_le_actual_profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_retail_le_avg_profit__c</fullName>
        <description>f_retail_le_avg_profit</description>
        <externalDeveloperName>f_retail_le_avg_profit</externalDeveloperName>
        <label>f_retail_le_avg_profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_retail_le_cash_rev__c</fullName>
        <description>f_retail_le_cash_rev</description>
        <externalDeveloperName>f_retail_le_cash_rev</externalDeveloperName>
        <label>f_retail_le_cash_rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>